# faceX

./: README.md  pyproject.toml
faceX/: .env  api.py
faceX/models/: __init__.py  comment.py  login.py  post.py  user.py  vote.py
faceX/routers/: __init__.py  auth.py  comments.py  posts.py  users.py  votes.py
faceX/utils/: __init__.py  config.py  database_connect.py  oauth2.py  password_manager.py
