[tool.poetry]
name = "facex"
version = "0.1.0"
description = ""
authors = ["varun <varun.katiyar@zohocorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pydantic = {extras = ["email"], version = "^2.6.3"}
mysql-connector = "^2.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
